--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
+edition = "2021"
 name = "rustmsx"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = { version = "0.20.0", features = ["csr"] }
+anyhow = "1.0.70"
+serde = {version = "1.0.159", features = ["derive"]}
+serde-big-array = "0.5.1"
+serde_json = "1.0.95"
+tracing = "0.1.37"
+tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
+wasm-bindgen = "0.2.84"
+web-sys = "0.3.61"
+yew = {version = "0.20.0", features = ["csr"]}
