--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde-big-array = "0.5.1"
 serde_json = "1.0.95"
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
+tracing-wasm = "0.2.1"
 wasm-bindgen = "0.2.84"
 web-sys = "0.3.61"
 yew = {version = "0.20.0", features = ["csr"]}
