--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.70"
+derivative = "2.2.0"
 gloo = "0.8.0"
 js-sys = "0.3.61"
 serde = {version = "1.0.159", features = ["derive"]}
