--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.70"
 derivative = "2.2.0"
+dyn-clone = "1.0.11"
+eventbus = "0.5.1"
 gloo = "0.8.0"
 js-sys = "0.3.61"
 serde = {version = "1.0.159", features = ["derive"]}
