--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,18 @@ js-sys = "0.3.61"
 serde = {version = "1.0.159", features = ["derive"]}
 serde-big-array = "0.5.1"
 serde_json = "1.0.95"
+thiserror = "1.0.40"
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
 tracing-wasm = "0.2.1"
 wasm-bindgen = "0.2.84"
-web-sys = "0.3.61"
+web-sys = {version = "0.3.61", features = [
+  "CanvasRenderingContext2d",
+  "ImageData",
+  "Document",
+  "Element",
+  "HtmlCanvasElement",
+  "Window",
+]}
 yew = {version = "0.20.0", features = ["csr"]}
+yewdux = "0.9.2"
