--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ serde = {version = "1.0.159", features = ["derive"]}
 serde-big-array = "0.5.1"
 serde_json = "1.0.95"
 thiserror = "1.0.40"
+time = {version = "0.3.20", features = ["wasm-bindgen"]}
 tracing = "0.1.37"
-tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
+tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt", "time"]}
 tracing-wasm = "0.2.1"
+tracing-web = "0.1.2"
 wasm-bindgen = "0.2.84"
 web-sys = {version = "0.3.61", features = [
   "CanvasRenderingContext2d",
