--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ anyhow = "1.0.70"
 clap = {version = "4.1.13", features = ["derive", "env"]}
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
+walkdir = "2.3.3"
+xml-rs = "0.8.4"
+dirs = "5.0.0"
+tinytemplate = "1.2.1"
+sha1 = "0.10.5"
+serde = { version = "1.0.159", features = ["derive"] }
