--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ dirs = "5.0.0"
 tinytemplate = "1.2.1"
 sha1 = "0.10.5"
 serde = { version = "1.0.159", features = ["derive"] }
+path-absolutize = "3.0.14"
