feat: allows driving both emulators from command line prompt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tinytemplate = "1.2.1"
 sha1 = "0.10.5"
 serde = { version = "1.0.159", features = ["derive"] }
 path-absolutize = "3.0.14"
+rustyline = "11.0.0"
